--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,15 @@
-* {
-    margin: 0;
+body {
+    overflow-x: hidden;
+}
 
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.container {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1200px;
+    
 }
