--- a/css/section2.css
+++ b/css/section2.css
@@ -35,15 +35,7 @@
     background-color: #ffffff;
     padding: 45px 30px;
     box-shadow: -20px 20px 1px 0px rgba(221, 223, 225);
-}
-
-.card-section2::before {
-    display: block;
-    content: "";
-    position: absolute;
-    left: -20px;
-    top: 20px;
-    background-color: rgba(221, 223, 225);
+    position: relative;
     z-index: 1;
 }
 
@@ -102,14 +94,71 @@
     display: block;
     content: attr(data-number);
     position: absolute;
-    right: -24px;
-    top: -110px;
-    z-index: -1;
-    color: rgb(251, 252, 240);
+    right: -8px;
+    top: -108px;
+    color: white;
     font-weight: bold;
     font-size: 150px;
 }
 
 .bold-section2 {
     font-weight: bold;
+}
+
+@media(max-width: 768px) {
+    *{
+        flex-wrap:wrap
+    }
+    .h2-section2 {
+        width: 587px;
+        height: 82px;
+        font-size: 30px;
+        letter-spacing: -1px;
+        line-height: 40px;
+        color: #222222;
+        font-family: "Acrom";
+        font-weight: bold;
+        text-align: center;
+        padding-bottom: 60px;
+    }
+    .cards-section2 {
+        width: 200px;
+        height: 229px;
+        filter: drop-shadow(0px 15px 16px rgba(0, 0, 0, 0.16));
+        background-color: #ffffff;
+        justify-content: center;
+        padding-bottom:40px ;
+       
+
+    }
+    .card-section2::after {
+        display: block;
+        content: attr(data-number);
+        position: absolute;
+        right: -4px;
+        top: -40px;
+        color: white;
+        font-weight: bold;
+        font-size: 60px;
+    }
+    .card_text-section2 {
+        color: #222222;
+        line-height: 1.5;
+    }
+    .button-section2 {
+        width: 530px;
+        height: 70px;
+        filter: drop-shadow(0px 2px 5px rgba(255, 107, 8, 0.59));
+        background-color: #ff702a;
+    }
+    .button_text-section2 {
+        font-size: 18px;
+        color: #ffffff;
+        font-family: "Acrom";
+        font-weight: 800;
+    }
+    .cards-media-section2{
+        display: flex;
+        justify-content: space-between;
+    }
 }
